2003-05-12  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_bnbio.c: Specify thread state (though needs more work to be practical)

2003-05-09  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_relay.c: Specify thread state

	* lib/b_pollio.c: Threadize

2003-05-09  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ioh.c (bk_ioh_init): only check bk_follow_pause when needed

2003-05-08  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c: Threadize

	* lib/b_listnum.c: Specify thread state

2003-05-07  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c: Threadize [stage one]

2003-05-02  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_url.c: Specify thread state

	* lib/b_time.c: Specify thread state

2003-05-01  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_sysutils.c: Specify thread state

	* lib/b_stdsock.c: Specify thread state

	* lib/b_strcode.c: Specify thread state

	* lib/b_skid.c: SKID is buggy and has never been tested, disable.

	* lib/b_servinfo.c: Specify thread state

	* lib/b_protoinfo.c: Specify thread state

	* lib/b_nvmap.c: Specify thread state

	* lib/b_memx.c (bk_memx_addstr): Update thread state

	* lib/b_netaddr.c: Specify thread state

2003-05-01  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_run.c (bk_run_fd_cancel_*): check that flags is set
	[immediate cause of EOF ignoring bug in file-plug]

2003-04-28  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_RETURN): eliminate umpteen billion calls to
	__errno_location, incorporate BK_ORETURN functionality
	(BK_ORETURN): trivially defined as BK_RETURN for compatibility

	* include/libbk_oscompat.h (NULL): ensure pointer-ness of NULL

	* lib/b_fun.c (bk_fun_exit): make the billion calls to _errno_location
	here, in a function only called if seatbelts are turned on

	* lib/b_strconv.c (bk_string_atou64_int): ignore trailing whitespace
	[applies to all of bk_string_ato{flag,[ui]{32,64}}]